--- a/styles.css
+++ b/styles.css
@@ -50,4 +50,164 @@ table {
 /* ---- END CSS Reset ---- */
 
 
+/* ---- BODY ---- */
+body {
+    width: 1280px;
+    margin: 0 auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #222;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 200px 1fr 130px;
+    justify-items: center;
+    line-height: 1.5;
+    margin: 15px;
+}
+
 /* ---- HEADER ---- */
+header {
+    grid-area: 1 / 1 / 2 / 13;
+    width: 100%;
+}
+
+h1 {
+    font-size: 2.8rem;
+    text-align: center;
+    margin-top: 40px;
+    font-weight: 700;
+}
+
+h1 a {
+    text-decoration: none;
+    color: #222;
+}
+
+nav {
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+li {
+    display: inline-block;
+}
+
+nav a {
+    display: block;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 50px;
+    padding: 10px;
+    background-color: #222;
+    color: white;
+}
+
+nav a:hover {
+    background-color: grey;
+    color: #222;
+}
+
+/* ---- MAIN ---- */
+main {
+    grid-area: 2 / 1 / 3 / 13;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr auto auto 800px;
+    justify-items: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.header-img {
+    grid-area: 1 / 1 / 2 / 5;
+    width: 1280px;
+    height: auto;
+}
+
+.intro {
+    grid-area: 2 / 1 / 3 / 5;
+    width: 100%;
+    padding: 25px 0;
+    background-color: #ccc;
+}
+
+h2 {
+    font-size: 1.7rem;
+    text-align: center;
+    font-weight: 600;
+}
+
+.our-menu {
+    width: 100px;
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #222;
+    color: white;
+}
+
+.our-menu:hover {
+    background-color: grey;
+    color: #222;
+}
+
+.cater {
+    grid-area: 3 / 1 / 4 / 5;
+    margin: 60px 0;
+}
+
+h3 {
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: 500;
+}
+
+p {
+    font-size: 1.17rem;
+    line-height: 1.5;
+    max-width: 42ch;
+}
+
+.grid {
+    width: 80%;
+    height: 80%;
+    background-color: rgb(220, 220, 220);
+    padding: 10px;
+}
+
+.grid p {
+    max-width: 42ch;
+    margin: 0 auto;
+}
+
+.grid img {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.local {
+    grid-area: 4 / 1 / 5 / 3;
+}
+
+.chef {
+    grid-area: 4 / 3 / 5 / 5;
+}
+
+/* ---- FOOTER ---- */
+footer {
+    grid-area: 3 / 1 / 4 / 13;
+    width: 100%;
+    padding: 25px 0;
+    background-color: #ccc;
+}
+
+footer p {
+    margin: 0 auto;
+    text-align: center;
+}
