--- a/styles.css
+++ b/styles.css
@@ -50,21 +50,31 @@ table {
 /* ---- END CSS Reset ---- */
 
 
+/* ---- VARIABLES ---- */
+:root {
+    --light-text-color: #f1eeee;
+    --dark-text-color: #181a1e;
+    --background-color: #f1eeee;
+    --accent-color: #8d1010;
+    --secondary-color: #c58542;
+}
+
 /* ---- BODY ---- */
 body {
     width: 1280px;
     margin: 0 auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #222;
+    color: var(--dark-text-color);
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 200px 1fr 130px;
     justify-items: center;
     line-height: 1.5;
-    margin: 15px;
+    margin: 12px;
+    background-image: url("images/white_wall2.png");
 }
 
-/* ---- HEADER ---- */
+/* ---- HEADER (Home and Contact) ---- */
 header {
     grid-area: 1 / 1 / 2 / 13;
     width: 100%;
@@ -75,11 +85,13 @@ h1 {
     text-align: center;
     margin-top: 40px;
     font-weight: 700;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 h1 a {
-    text-decoration: none;
-    color: #222;
+    text-decoration-style: dotted;
+    text-decoration-color: var(--accent-color);
+    color: var(--dark-text-color);
 }
 
 nav {
@@ -94,26 +106,37 @@ li {
 
 nav a {
     display: block;
-    width: 100px;
+    font-size: 1.3rem;
+    width: 120px;
     text-align: center;
     text-decoration: none;
     margin: 0 50px;
-    padding: 10px;
-    background-color: #222;
-    color: white;
+    padding: 5px;
+    color: var(--dark-text-color);
+    transition-duration: 0.2s;
+}
+
+nav a {
+    border-top: 3px solid #222;
+    border-bottom: 3px solid #222;
 }
 
 nav a:hover {
-    background-color: grey;
-    color: #222;
+    border-top: 3px solid var(--accent-color);
+    border-bottom: 3px solid var(--accent-color);
+    color: var(--accent-color);
 }
 
-/* ---- MAIN ---- */
+nav a:active {
+    transform: scale(0.95);
+}
+
+/* ---- MAIN (Home)---- */
 main {
     grid-area: 2 / 1 / 3 / 13;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr auto auto 800px;
+    grid-template-rows: 1fr auto auto 700px;
     justify-items: center;
     align-items: center;
     margin: 0 auto;
@@ -129,30 +152,37 @@ main {
     grid-area: 2 / 1 / 3 / 5;
     width: 100%;
     padding: 25px 0;
-    background-color: #ccc;
+    background-color: var(--background-color);
 }
 
 h2 {
-    font-size: 1.7rem;
+    font-size: 2rem;
     text-align: center;
     font-weight: 600;
 }
 
 .our-menu {
     width: 100px;
+    font-size: 1.15rem;
     text-align: center;
     display: block;
     text-decoration: none;
     margin: 0 auto;
     margin-top: 20px;
     padding: 10px;
-    background-color: #222;
-    color: white;
+    border: 2px solid var(--secondary-color);
+    color: var(--dark-text-color);
 }
 
 .our-menu:hover {
-    background-color: grey;
-    color: #222;
+    background-color: var(--secondary-color);
+    color: var(--dark-text-color);
+}
+
+.our-menu:active {
+    background-color: var(--secondary-color);
+    color: var(--dark-text-color);
+    transform: scale(0.95);
 }
 
 .cater {
@@ -161,9 +191,10 @@ h2 {
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     text-align: center;
     font-weight: 500;
+    color: var(--dark-text-color);
 }
 
 p {
@@ -174,9 +205,16 @@ p {
 
 .grid {
     width: 80%;
-    height: 80%;
-    background-color: rgb(220, 220, 220);
+    height: 90%;
+    background-color: var(--dark-text-color);
     padding: 10px;
+    box-shadow: 11px 12px 22px 0px rgba(0,0,0,0.84);
+    -webkit-box-shadow: 11px 12px 22px 0px rgba(0,0,0,0.84);
+    -moz-box-shadow: 11px 12px 22px 0px rgba(0,0,0,0.84);
+}
+
+.grid p, .grid h3 {
+    color: var(--light-text-color);
 }
 
 .grid p {
@@ -199,12 +237,16 @@ p {
     grid-area: 4 / 3 / 5 / 5;
 }
 
-/* ---- FOOTER ---- */
+
+/* ---- MAIN (Contact) ---- */
+
+
+/* ---- FOOTER (Home and Contact)---- */
 footer {
     grid-area: 3 / 1 / 4 / 13;
     width: 100%;
     padding: 25px 0;
-    background-color: #ccc;
+    background-color: var(--background-color);
 }
 
 footer p {
