--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ table {
     --dark-text-color: #181a1e;
     --background-color: #f1eeee;
     --accent-color: #8d1010;
+    /* --accent-color: #c21c1c; */
     --secondary-color: #c58542;
 }
 
@@ -66,24 +67,23 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--dark-text-color);
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 200px 1fr 130px;
     justify-items: center;
     line-height: 1.5;
-    margin: 12px;
+    padding: 12px;
     background-image: url("images/white_wall2.png");
 }
 
 /* ---- HEADER (Home and Contact) ---- */
 header {
-    grid-area: 1 / 1 / 2 / 13;
+    grid-row: 1 / 2;
     width: 100%;
 }
 
 h1 {
-    font-size: 2.8rem;
+    font-size: 3.8rem;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 10px;
     font-weight: 700;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
@@ -113,7 +113,6 @@ nav a {
     margin: 0 50px;
     padding: 5px;
     color: var(--dark-text-color);
-    transition-duration: 0.2s;
 }
 
 nav a {
@@ -121,10 +120,27 @@ nav a {
     border-bottom: 3px solid #222;
 }
 
-nav a:hover {
+.home-nav:hover {
     border-top: 3px solid var(--accent-color);
     border-bottom: 3px solid var(--accent-color);
-    color: var(--accent-color);
+}
+
+.menu-nav:hover {
+    border-top: 3px solid var(--secondary-color);
+    border-bottom: 3px solid var(--secondary-color);
+    box-shadow: none;
+}
+
+.order-nav:hover {
+    border-top: 3px solid green;
+    border-bottom: 3px solid green;
+    box-shadow: none;
+}
+
+.contact-nav:hover {
+    border-top: 3px solid rgb(2, 2, 195);
+    border-bottom: 3px solid rgb(2, 2, 195);
+    box-shadow: none;
 }
 
 nav a:active {
@@ -133,7 +149,7 @@ nav a:active {
 
 /* ---- MAIN (Home)---- */
 main {
-    grid-area: 2 / 1 / 3 / 13;
+    grid-row: 2 / 3;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr auto auto 700px;
@@ -205,7 +221,7 @@ p {
 
 .grid {
     width: 80%;
-    height: 90%;
+    height: 91%;
     background-color: var(--dark-text-color);
     padding: 10px;
     box-shadow: 11px 12px 22px 0px rgba(0,0,0,0.84);
@@ -215,6 +231,12 @@ p {
 
 .grid p, .grid h3 {
     color: var(--light-text-color);
+}
+
+.grid h3 {
+    border-bottom: 2px dotted var(--secondary-color);
+    width: 50%;
+    margin: 0 auto;
 }
 
 .grid p {
@@ -239,11 +261,123 @@ p {
 
 
 /* ---- MAIN (Contact) ---- */
+.contact-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto 1fr 1fr;
+}
+
+.contact-img {
+    grid-area: 1 / 2 / 3 / 3;
+    margin: 10px;
+}
+
+.contact-h2, .contact-p {
+    grid-area: 1 / 1 / 3 / 2;
+    max-width: 35ch;
+}
+
+.contact-h2 {
+    margin-bottom: 200px;
+}
+
+.contact-p {
+    padding: 15px;
+}
+
+form {
+    grid-area: 3 / 1 / 5 / 3;
+    width: 1100px;
+    height: 560px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 15px auto;
+    background-color: var(--background-color);
+    padding: 16px;
+    border: 2px dotted var(--dark-text-color);
+    border-radius: 4px;
+}
+
+input, label, select, textarea, fieldset {
+    display: block;
+    width: 400px;
+    margin: 0 auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+label {
+    font-weight: bold;
+}
+
+input, select, textarea {
+    padding: 10px;
+    font-size: 1rem;
+    margin-bottom: 30px;
+    border: 1px solid var(--dark-text-color);
+    border-radius: 2px;
+}
+
+fieldset {
+    border: 1px groove var(--dark-text-color);
+    margin-bottom: 30px;
+    border-radius: 2px;
+}
+
+legend {
+    font-weight: bold;
+    margin-left: 8px;
+}
+
+fieldset label {
+    margin-left: 30px;
+    margin: 10px 0 10px 30px;
+    cursor: pointer;
+}
+
+fieldset input {
+    width: 16px;
+    height: 16px;
+    font-weight: bold;
+    margin: -30px 10px 10px 8px;
+    cursor: pointer;
+}
+
+input[type=submit] {
+	background-color: var(--secondary-color);
+	border: none;
+	color: white;
+	font-size: 18px;
+	font-weight: bold;
+	box-shadow: 6px 6px 10px var(--dark-text-color);
+    border-radius: 4px;
+    width: 200px;
+    margin-top: 80px;
+}
+
+input[type=submit]:hover {
+    box-shadow: 3px 3px 5px #363432;
+    cursor: pointer;
+}
+
+input[type=submit]:active {
+    box-shadow: 1px 1px 2.5px #363432;
+    background-color: var(--secondary-color);
+}
+
+input:invalid, select:invalid, textarea:invalid {
+    border: 2px solid var(--accent-color);
+}
+
+input:focus, select:focus, textarea:focus {
+    outline: 2px solid var(--secondary-color);
+    background-color: var(--light-text-color);
+}
 
 
 /* ---- FOOTER (Home and Contact)---- */
 footer {
-    grid-area: 3 / 1 / 4 / 13;
+    grid-row: 3 / 4;
     width: 100%;
     padding: 25px 0;
     background-color: var(--background-color);
