--- a/styles.css
+++ b/styles.css
@@ -59,18 +59,21 @@ table {
     --secondary-color: #c58542;
     --order-nav-border: rgb(42, 97, 42);
     --contact-nav-border: #2a457c;
-    --color: rgb(2, 2, 195);
+
+    /* subtract padding * 2 from total width (1280px) */
+    --body-padding: 15px;
+    --page-width: calc(1280px - (var(--body-padding) * 2));
 }
 
 /* ------ BODY ------ */
 body {
-    /* subtract 30 to allow padding */
-    width: 1250px;
-    padding: 15px;
+    width: var(--page-width);
+    padding: var(--body-padding);
     margin: 0 auto;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--dark-text-color);
     display: grid;
+    grid-template-columns: 1fr;
     grid-template-rows: 200px 1fr 130px;
     justify-items: center;
     line-height: 1.5;
@@ -184,7 +187,7 @@ nav a:active {
 
 
 /* ----- MAIN (Home)------ */
-main {
+.home-page {
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -196,7 +199,7 @@ main {
 
 .header-img {
     grid-area: 1 / 1 / 2 / 5;
-    width: 1280px;
+    width: var(--page-width);
     height: auto;
 }
 
@@ -302,6 +305,9 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .contact-img {
